add menu faeture

--- a/index.html
+++ b/index.html
@@ -1,2 +1,5 @@
 <header>Header1</header>
 <h3>Hello</h3>
+
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur beatae modi quam ab? Doloribus vero voluptates dolorum, nostrum reiciendis voluptatibus. Doloremque vero odio eum eos sit laborum enim eligendi nihil?
+</p>
